src/test/deca/context/invalid/object/fieldDEclaration.deca
class A
{
  int a;
  float a;
}
